User profile (#18)
* added GET route for fetching profile
